ADW: Fixed COM extension  bug #37927.  Correct the processing of in/out arguments of type VT_DISPATCH|VT_REF