ext/com_dotnet/com_misc.c
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: com_misc.c,v 1.12 2007/01/01 09:29:21 sebastian Exp $ */
+/* $Id: com_misc.c,v 1.13 2007/02/01 18:05:10 wharmby Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -79,7 +79,7 @@ PHPAPI void php_com_wrap_variant(zval *z, VARIANT *v,
 	VariantInit(&obj->v);
 	VariantCopyInd(&obj->v, v);
 
-	if (V_VT(&obj->v) == VT_DISPATCH) {
+	if ((V_VT(&obj->v) == VT_DISPATCH) && (V_DISPATCH(&obj->v) != NULL)) {
 		IDispatch_GetTypeInfo(V_DISPATCH(&obj->v), 0, LANG_NEUTRAL, &obj->typeinfo);
 	}
 
